[package]
name = "monkeonnear-market"
version = "0.1.0"
authors = ["Irfianto <irfi@paras.id>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.3"
near-contract-standards = "4.0.0-pre.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1"